--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ spec/dummy/db/*.sqlite3
 spec/dummy/db/*.sqlite3-journal
 spec/dummy/log/*.log
 spec/dummy/tmp/
+spec/dummy/index/
 spec/dummy/.sass-cache
 Gemfile.lock
 /coverage
